--- a/index.html
+++ b/index.html
@@ -2,34 +2,51 @@
 <html>
   <head>
     <title>Rouslan Popov - web developper</title>
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Open+Sans+Condensed:300" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
   </head>
   <body>
-    <img src="profile.png" alt="Rouslan Popov">
-    <h1>Rouslan Popov</h1>
-    <h2>Web developper</h2>
+
+<table class="headers">
+  <tr>
+    <td>
+      <img src="profile.png" alt="Rouslan Popov" id="profil_image">
+    </td>
+    <td>
+      <h1>Rouslan Popov</h1>
+    <h3>Web developper</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a href="#">Contact</a>
+    <a href="#" id="btn" >Contact</a>
+    </td>
+  </tr>
+</table>
+
+
+<div class="container">
+
+    <div class="social">
     <ul>
       <li><a href=""><i class="fab fa-facebook-f"></i> Facebook</a></li>
       <li><a href=""><i class="fab fa-linkedin-in"></i> Linkedin</a></li>
       <li><a href=""><i class="fab fa-twitter"></i> Twitter</a></li>
     </ul>
-
-    <h2>My favorite movies</h2>
+   </div>
+   <div class="table">
+    <h2>My favorite desserts</h2>
     <table>
       <tr>
         <td>
-          <p><img src="film1.jpg"></p>
+          <p><img src="pic1.jpg"></p>
         </td>
         <td>
-          <h3>blabla</h3>
+          <h3>Amiral à la rose</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -40,10 +57,10 @@
       </tr>
         <tr>
         <td>
-          <p><img src="film2.jpg"></p>
+          <p><img src="pic2.jpg"></p>
         </td>
         <td>
-          <h3>blabla</h3>
+          <h3>Chocolat caramelo</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -54,10 +71,10 @@
       </tr>
         <tr>
         <td>
-          <p><img src="film3.jpg"></p>
+          <p><img src="pic3.jpg"></p>
         </td>
         <td>
-          <h3>blabla</h3>
+          <h3>Coeur de macaron</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -67,9 +84,13 @@
         </td>
       </tr>
     </table>
+    </div>
+    <div class="footer">
     <h2>About the page</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-  </body>
+    </div>
+</div>
+</body>
 </html>
 
 
